Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.bib
+++ b/FACTIUNN.bib
@@ -33,11 +33,11 @@
   year={2008},
   publisher={Siam}
 }
-@techreport{STAY-SLPNNL,
+@techreport{Stayslpnnl,
   title={User guide for the STAYSL PNNL suite of software tools},
-  author={Greenwood, Lawrence R and Johnson, Christian D},
+  author={Greenwood, Lawrence R. and Johnson, Christian D.},
   year={2013},
-  institution={Pacific Northwest National Lab.(PNNL), Richland, WA (United States)}
+  institution={Pacific Northwest National Lab.(PNNL), Richland, WA (United States)},
 }
 @online{FISPACT_reference_spectra,
   author = {{UKAEA}},
@@ -48,11 +48,11 @@
 }
 
 @online{FISPACT,
-  author = {Culham Centre for Fusion Energy},
   title = {UKAEA: FISTACT-II},
-  year = {2017},
   url = {http://www.ccfe.ac.uk/fispact.aspx},
-  urldate = {06/09/2017}
+  urldate = {06/09/2017},
+  organization = {Culham Centre for Fusion Energy},
+  year = {2017},
 }
 
 @book {FusionAnIntro_Stacey,
@@ -89,31 +89,31 @@
   keywords = {Controlled fusion; Plasma (Ionized gases)},
 }
 @article{ADRIANA_lab_equiv,
-issn = {0920-3796},
-abstract = {•Activation foil measurements at JET.•Comparison against Monte Carlo simulations.•Pre-analysis of the planned Tritium-Tritium and Deuterium-Tritium experiments.•Preparation for the forthcoming high performance Deuterium-Tritium campaign. Neutronics experiments are carried out at the Joint European Torus (JET) in preparation for the forthcoming high performance Deuterium-Tritium (D-T) campaign. Among others, activation foil measurements are performed in order to evaluate neutron streaming in various positions within the torus hall far from the plasma source. In the present study, the neutron fluence measurements performed using activation foils during the JET Deuterium-Deuterium (D-D) campaign are discussed. The activation foil results in terms of reaction rates are compared against Monte Carlo simulations and a satisfactory agreement is observed. Moreover, the pre-analysis of the experiments to be performed in the forthcoming JET Tritium-Tritium (T-T) and Deuterium-Tritium (D-T) campaigns is presented. The results of the study provide important data and support the preparation of the experimental activities in view of the planned JET D-T operation, allowing the exploitation of the unique 14 MeV neutron yields anticipated. Furthermore, they contribute to the validation of the tools employed in nuclear analyses, which are fundamental for the design and safety of ITER and future fusion power plants.},
-journal = {Fusion Engineering and Design},
-pages = {250--255},
-volume = {146},
-publisher = {Elsevier B.V.},
-year = {2019},
-title = {Activation foil measurements at JET in preparation for D-T plasma operation},
-language = {eng},
-author = {Vasilopoulou, T. and Stamatelatos, I.E. and Batistoni, P. and Fonnesu, N. and Villari, R. and Naish, J. and Popovichev, S. and Obryk, B.},
-keywords = {Joint European Torus ; Fusion ; Neutron Fluence Measurements ; Neutron Activation},
+  issn = {0920-3796},
+  abstract = {•Activation foil measurements at JET.•Comparison against Monte Carlo simulations.•Pre-analysis of the planned Tritium-Tritium and Deuterium-Tritium experiments.•Preparation for the forthcoming high performance Deuterium-Tritium campaign. Neutronics experiments are carried out at the Joint European Torus (JET) in preparation for the forthcoming high performance Deuterium-Tritium (D-T) campaign. Among others, activation foil measurements are performed in order to evaluate neutron streaming in various positions within the torus hall far from the plasma source. In the present study, the neutron fluence measurements performed using activation foils during the JET Deuterium-Deuterium (D-D) campaign are discussed. The activation foil results in terms of reaction rates are compared against Monte Carlo simulations and a satisfactory agreement is observed. Moreover, the pre-analysis of the experiments to be performed in the forthcoming JET Tritium-Tritium (T-T) and Deuterium-Tritium (D-T) campaigns is presented. The results of the study provide important data and support the preparation of the experimental activities in view of the planned JET D-T operation, allowing the exploitation of the unique 14 MeV neutron yields anticipated. Furthermore, they contribute to the validation of the tools employed in nuclear analyses, which are fundamental for the design and safety of ITER and future fusion power plants.},
+  journal = {Fusion Engineering and Design},
+  pages = {250--255},
+  volume = {146},
+  publisher = {Elsevier B.V.},
+  year = {2019},
+  title = {Activation foil measurements at JET in preparation for D-T plasma operation},
+  language = {eng},
+  author = {Vasilopoulou, T. and Stamatelatos, I.E. and Batistoni, P. and Fonnesu, N. and Villari, R. and Naish, J. and Popovichev, S. and Obryk, B.},
+  keywords = {Joint European Torus ; Fusion ; Neutron Fluence Measurements ; Neutron Activation},
 }
 
 @article{bethColling_TBMD,
-issn = {0920-3796},
-abstract = {Accurate measurement of the nuclear environment within a test tritium breeding-blanket module of a fusion reactor is crucial to determine tritium production rates which are relevant to self-sufficiency of tritium fuel supply, tritium accountancy and also to the evaluation of localised power levels produced in blankets. This requires evaluation of the time-dependent spectral neutron flux within the test tritium breeding-blanket module under harsh radiation and temperature environments. The application of an activation foil-based spectrometer system to determine neutron flux density using a pneumatic transfer system in ITER has been studied, deployed and tested on the Joint European Torus (JET) machine in a recent deuterium - deuterium campaign for a selection of high purity activation foils. Deployment of the spectrometer system has provided important functional and practical testing of the detector measurement system, associated hardware and post processing techniques for the analysis of large data sets produced through the use of list mode data collection. The testing is invaluable for the optimisation of systems for future planned testing in tritium - tritium and deuterium - tritium conditions. Analysis of the time and energy spectra collected to date and the status of the development of methods for post-processing are presented in this paper.},
-journal = {Fusion Engineering and Design},
-pages = {258--264},
-volume = {136},
-publisher = {Elsevier B.V.},
-year = {2018},
-title = {Testing of tritium breeder blanket activation foil spectrometer during JET operations},
-language = {eng},
-author = {Colling, Bethany and Batistoni, P. and Bradnam, S.C. and Ghani, Z. and Gilbert, M.R. and Nobs, C.R. and Packer, L.W. and Pillon, M. and Popovichev, S.},
-keywords = {Jet ; Iter ; Tbm ; Activation ; Neutronics},
+  issn = {0920-3796},
+  abstract = {Accurate measurement of the nuclear environment within a test tritium breeding-blanket module of a fusion reactor is crucial to determine tritium production rates which are relevant to self-sufficiency of tritium fuel supply, tritium accountancy and also to the evaluation of localised power levels produced in blankets. This requires evaluation of the time-dependent spectral neutron flux within the test tritium breeding-blanket module under harsh radiation and temperature environments. The application of an activation foil-based spectrometer system to determine neutron flux density using a pneumatic transfer system in ITER has been studied, deployed and tested on the Joint European Torus (JET) machine in a recent deuterium - deuterium campaign for a selection of high purity activation foils. Deployment of the spectrometer system has provided important functional and practical testing of the detector measurement system, associated hardware and post processing techniques for the analysis of large data sets produced through the use of list mode data collection. The testing is invaluable for the optimisation of systems for future planned testing in tritium - tritium and deuterium - tritium conditions. Analysis of the time and energy spectra collected to date and the status of the development of methods for post-processing are presented in this paper.},
+  journal = {Fusion Engineering and Design},
+  pages = {258--264},
+  volume = {136},
+  publisher = {Elsevier B.V.},
+  year = {2018},
+  title = {Testing of tritium breeder blanket activation foil spectrometer during JET operations},
+  language = {eng},
+  author = {Colling, Bethany and Batistoni, P. and Bradnam, S.C. and Ghani, Z. and Gilbert, M.R. and Nobs, C.R. and Packer, L.W. and Pillon, M. and Popovichev, S.},
+  keywords = {Jet ; Iter ; Tbm ; Activation ; Neutronics},
 }
 @online{AndrewNgNormalization,
   title={Normalizing Inputs (C2W1L09)},
@@ -128,6 +128,20 @@ keywords = {Jet ; Iter ; Tbm ; Activation ; Neutronics},
   author={McElroy, WN and Berg, S and Crockett, T and Hawkins, RG},
   year={1967},
   institution={ATOMICS INTERNATIONAL CANOGA PARK CA}
+}
+@online{ReLU,
+  title={tf.nn.relu},
+  url={https://www.tensorflow.org/api_docs/python/tf/nn/relu?hl=EL},
+  urldate={25/06/2019},
+  organization={Google},
+  year={2019}  
+}
+@online{AdamOptimizer,
+  title={tf.train.AdamOptimizer},
+  ulr={https://www.tensorflow.org/api_docs/python/tf/train/AdamOptimizer},
+  urldate={25/06/2019},
+  organization={Google},
+  year={2019}  
 }
 @online{TensorflowOverfitting,
 title={explore overfitting and underfitting tensorflow core 2019},
